[package]
name = "dab-rs"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
version = "*"
features = ["http", "builder", "client", "gateway", "cache", "temp_cache", "voice", "standard_framework"]

[dependencies.tokio]
version = "*"
features = ["rt", "rt-multi-thread", "macros", "signal", "time"]

# https://github.com/cross-rs/cross/issues/229#issuecomment-597898074
[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "*", features = ["vendored"] }

[dependencies]
mysql_async = "*"
unic-langid = "*"
fluent-bundle = "*"
intl-memoizer = "*"
log = "*"
fern = { version = "*", features = ["colored"] }
chrono = "*"
songbird = "*"
url = "*"
config = "*"
async-trait = "*"
ffprobe = "*"
fs_extra = "*"
bus = "*"
reqwest = "*"
uuid = { version = "*", features = ["v4"] }
