[package]
name = "dab-rs"
version = "0.1.4"
edition = "2021"

[profile.release]
strip = "symbols"

[dependencies.serenity]
version = "*"
default_features = false
features = ["http", "builder", "client", "gateway", "cache", "temp_cache", "voice"]

[dependencies.tokio]
version = "*"
features = ["rt", "rt-multi-thread", "macros", "signal", "time"]

# https://github.com/cross-rs/cross/issues/229#issuecomment-597898074
[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "*", features = ["vendored"] }

[dependencies]
getopts = "*"
nameof = "*"
mysql_async = "*"
unic-langid = "*"
fluent-bundle = "*"
intl-memoizer = "*"
log = "*"
fern = { version = "*", features = ["colored"] }
chrono = "*"
songbird = "*"
url = "*"
config = "*"
async-trait = "*"
ffprobe = "*"
fs_extra = "*"
bus = "*"
reqwest = "*"
uuid = { version = "*", features = ["v4"] }
