[dependencies]
async-trait = '0.1.73'
bus = '2.4.1'
chrono = '0.4.31'
config = '0.13.3'
ffprobe = '0.3.3'
fluent-bundle = '0.15.2'
fs_extra = '1.3.0'
getopts = '0.2.21'
intl-memoizer = '0.5.1'
log = '0.4.20'
nameof = '1.2.2'
reqwest = '0.11.20'
songbird = '0.3.2'
tokio-postgres = '0.7.10'
unic-langid = '0.9.1'
url = '2.4.1'

[dependencies.fern]
features = ['colored']
version = '0.6.2'

[dependencies.serenity]
default_features = false
features = [
    'http',
    'builder',
    'client',
    'gateway',
    'cache',
    'temp_cache',
    'voice',
    'native_tls_backend',
]
version = '0.11.6'

[dependencies.tokio]
features = [
    'rt',
    'rt-multi-thread',
    'macros',
    'signal',
    'time',
]
version = '1.32.0'

[dependencies.uuid]
features = ['v4']
version = '1.4.1'

[package]
edition = '2021'
name = 'dab-rs'
version = '0.2.2'
[profile.release]
strip = 'symbols'
